[package]
name = "process-tracker"
description = "Keep track of processes and how long they've been running. Wakatime but for processes"
authors = ["Almeida <hi@almeidx.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
humantime = "2.1.0"
once_cell = "1.18.0"
regex = "1.9.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sysinfo = "0.29.10"
whoami = "1.4.1"
