[package]
name = "process-tracker"
description = "Keep track of processes and how long they've been running. Wakatime but for processes"
authors = ["Almeida <hi@almeidx.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.30", default-features = false }
humantime = "2.1.0"
once_cell = "1.18.0"
regex = "1.9.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
whoami = "1.5.0"
winapi = { version = "0.3.9", features = [
	"minwindef",
	"processthreadsapi",
	"psapi",
	"winnt",
	"winuser",
] }
